--- a/css/responsive.css
+++ b/css/responsive.css
@@ -195,14 +195,54 @@
     font-size: 14px;
   }
 
-  input.search-form:hover {
-    width: 120px;
+.service-img{
+    height: auto;
   }
+.navbar-inverse .navbar-toggle .icon-bar{
+  background-color: #666;
+}
+.navbar-inverse .navbar-toggle{
+  border:none;
+  margin-top: 0;
+}
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{
+  background: none;
+  border:none;
+  outline:none;
+}
+.navbar-inverse .navbar-brand{
+  line-height: 30px;
+}
+.navbar-brand img {
+  width: 210px;
 
-  .navbar-nav > li {
-    padding-bottom: 0;
+}
+.navbar-nav li{
+  margin-left: 0;
+  padding-bottom: 0;
+  margin-bottom: 10px;
+}
+.navbar-inverse .navbar-nav li a {
+  display: block;
+  border-radius: 0;
+}
+input.search-form.expand, input.search-form{
+  width: 280px;
+  display: block;
+}
+.navbar-nav{
+  margin:7.5px 0;
+}
+  
+  .search i{
+    position: absolute;
+    top:0;
+    right: 20px;
+    margin-left: 0;
   }
-
+  .navbar-collapse{
+    padding-left:0; 
+  }
   #main-slider .carousel h1 {
     font-size: 25px;
   }
@@ -210,7 +250,39 @@
   #main-slider .carousel h2 {
     font-size: 16px;
   }
-
+  .feature-wrap {
+    text-align: center;
+  }
+  .tools h4{
+    line-height: 24px;
+  }
+  #conatcat-info{
+    background-image:none;
+  }
+  body > section{
+    padding: 20px 0;
+  }
+  .center{
+    padding-bottom: 0;
+  }
+  .center h2{
+    font-size: 28px;
+  }
+  .lead{
+    font-size: 14px;
+  }
+  .form-group:before, .form-group:after {
+    display: table;
+    content:"";
+  }
+  .form-group:after {
+    clear: both;
+  }
+.feature-wrap i{
+  float: none;
+  display: block;
+  margin: 0 auto;
+}
   .feature-wrap h2, 
   .single-services h2 {
     font-size: 18px;
@@ -221,7 +293,15 @@
     font-size: 14px;
   }
 
-
+.contact-wrap .btn-primary{
+  float: none !important;
+  display: block;
+  width: 100%;
+}
+.gmap-area .map-content ul{
+  margin: 0;
+  padding:0; 
+}
   .media.accordion-inner .pull-left, 
   .media.accordion-inner .media-body{
     clear: both;
