--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ h2{
 }
 
 h3{
-  font-size: 16px;
+  font-size: 15px;
   color: #787878;
   font-weight: 400;
   line-height: 24px;
@@ -130,7 +130,7 @@ body > section {
 }
 
 .lead{
-  font-size: 16px;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 400;
 }
@@ -217,9 +217,10 @@ ul.social-share li a {
   display: inline-block;
   color: #333;
   background: #ddd;
-  width: 25px;
-  height: 25px;
-  line-height: 25px;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  font-size: 20px;
   text-align: center;
   border-radius: 2px;
 }
@@ -286,11 +287,13 @@ input.search-form.expand {
 
  .navbar-nav{
   margin-top: 12px;
+   padding-bottom: 28px;
  }
 
 .navbar-nav>li{
   margin-left: 28px;
-  padding-bottom: 28px;
+  padding: 0 4px;
+ border-radius: 3px;
 }
 
 .navbar-inverse .navbar-nav > li > a {
@@ -305,8 +308,11 @@ input.search-form.expand {
   text-transform: uppercase;
 }
 
-.navbar-inverse .navbar-nav > li > a:hover{
+.navbar-inverse .navbar-nav > li:hover{
 	background-color: #c00000;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > li:hover a{
   color: #fff;
 }
 
@@ -320,14 +326,17 @@ input.search-form.expand {
   color: #fff;
 }
 
-.navbar-inverse .navbar-nav > .active > a,
-.navbar-inverse .navbar-nav > .active > a:hover,
-.navbar-inverse .navbar-nav > .active > a:focus,
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:hover,
-.navbar-inverse .navbar-nav > .open > a:focus {
+.navbar-inverse .navbar-nav > .active,
+.navbar-inverse .navbar-nav > .active:hover,
+.navbar-inverse .navbar-nav > .active:focus,
+.navbar-inverse .navbar-nav > .open,
+.navbar-inverse .navbar-nav > .open:hover,
+.navbar-inverse .navbar-nav > .open:focus {
   background-color: #c00000;
   color: #fff;
+}
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus{
+  background: transparent;
 }
 
 .navbar-inverse .navbar-nav .dropdown-menu {
@@ -600,6 +609,9 @@ input.search-form.expand {
   box-shadow: inset 0 0 0 5px #c52d2f;
   -webkit-box-shadow: inset 0 0 0 5px #c52d2f;
   border: 3px solid #c52d2f;
+}
+.feature-wrap a, .services-wrap a {
+  color: #787878;
 }
 
 #recent-works .col-xs-12.col-sm-4.col-md-3{
@@ -1923,17 +1935,19 @@ ul.social_icons li  a i{
 
 .gmap{
     border: 10px solid #f6f5f0;
-    border-radius: 50%;
+/*    border-radius: 50%;
     height: 300px;
     width: 300px;
     box-shadow: 0px 0px 3px 3px #e7e4dc;
-    overflow: hidden;
+*/    overflow: hidden;
     position: relative;
     margin: 0 auto;
 }
 
 .gmap-area .map-content ul {
   list-style: none; 
+  margin:0;
+  padding: 0;
 }
 
 .gmap-area .map-content address h5{
@@ -2508,7 +2522,7 @@ shortcodes page css
   margin-right: 15px;
 }
 
-#footer p, #footer address {
+#footer p, #footer address, .sub-footer a {
   color:#ced3d8
 }
 /* latest styles 05/18/2016*/
@@ -2574,17 +2588,21 @@ ul {list-style-type: none}
   font-size: 18px;
   color: #fff;
 }
+.sub-footer{
+  background: #353F4A;
+   margin-top: 30px;
+  padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 .sub-footer .container{
   /*background: #666;*/
-  margin-top: 30px;
-  padding-top: 40px;
-    padding-bottom: 40px;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
+  
+   
 }
 .sub-footer a {
-  color: #fff;
   text-transform: uppercase;
+  font-size: 13px;
 }
 #footer .info li a{
   color: #fff;
@@ -2607,6 +2625,13 @@ h3.section-heading {
   /*background: #fcfcfc;*/
   /*text-align: center;
   */border-top: 3px solid #D5D0D0;
+}
+.service-block:before, .service-block:after{
+  display: table;
+  content:"";
+}
+.service-block:after {
+  clear: both;
 }
 .service-block h4 {
   margin:0 0 15px 0; 
@@ -2633,11 +2658,12 @@ h3.section-heading {
     margin: 0 0 20px
 }
 .service-block .right {
-  text-align: right;
-  display: block;
+  float: right;
+  display: inline-block;
 }
 .copyright {
   font-size: 12px;
+  margin-top: 10px;
 }
 .copyright a {
   text-transform: none;
@@ -2677,3 +2703,24 @@ p{
   padding-top: 18px;
 }
 
+#footer .faq {
+  font-size: 16px;
+}
+.contact-wrap {
+  background:#f6f6f6;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+}
+.contact-wrap .btn-primary {
+  margin: 30px -20px 0 0;
+}
+header {
+  box-shadow:0 0 3px rgba(0,0,0,.5)
+}
+.navbar li i{
+  cursor: pointer;
+      font-size: 20px;
+    position: relative;
+    top: 2px;
+    right:4px;
+}
